@@ -11,6 +11,8 @@ git-annex (0.03) UNRELEASED; urgency=low
   * Added remote.annex-scp-options and remote.annex-ssh-options.
   * The backends to use when adding different sets of files can be configured
     via gitattributes.
+  * In .gitattributes, the git-annex-backend attribute can be set to the
+    names of backends to use when adding different types of files.
 
  -- Joey Hess <joeyh@debian.org>  Thu, 28 Oct 2010 13:46:59 -0400
 
